添加站点描述

--- a/about/index.html
+++ b/about/index.html
@@ -452,7 +452,7 @@ English
                alt="TyouSF" />
           <p class="site-author-name" itemprop="name">TyouSF</p>
            
-              <p class="site-description motion-element" itemprop="description"></p>
+              <p class="site-description motion-element" itemprop="description">测试 开发 日语</p>
           
         </div>
         <nav class="site-state motion-element">
