--- a/about/index.html
+++ b/about/index.html
@@ -128,7 +128,7 @@ English
 暂时就这么多吧，不能再说了，嘘，我们要保持神秘哦~">
 <meta property="og:type" content="website">
 <meta property="og:title" content="TyouSF">
-<meta property="og:url" content="http://yoursite.com/about/index.html">
+<meta property="og:url" content="https://tyousf.github.io/about/index.html">
 <meta property="og:site_name" content="TyouSF">
 <meta property="og:description" content="我
 
@@ -202,7 +202,7 @@ English
 
 
 
-  <link rel="canonical" href="http://yoursite.com/about/"/>
+  <link rel="canonical" href="https://tyousf.github.io/about/"/>
 
 
 
