--- a/about/index.html
+++ b/about/index.html
@@ -89,7 +89,7 @@
 <link href="/css/main.css?v=5.1.0" rel="stylesheet" type="text/css" />
 
 
-  <meta name="keywords" content="TyouSF,Test,Python,测试" />
+  <meta name="keywords" content="TyouSF,Test,Python,测试,zhaosf,tyousf" />
 
 
 
