new post is over

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <link href="/css/main.css?v=5.1.0" rel="stylesheet" type="text/css" />
 
 
-  <meta name="keywords" content="TyouSF,tyousf,Test,test,Python,python,测试" />
+  <meta name="keywords" content="TyouSF,tyousf,Test,test,Python,python,测试,自动化测试" />
 
 
 
@@ -433,10 +433,9 @@
 
       
         
-          <blockquote class="blockquote-center"><p>好不容易搭建起了第一个属于自己的个人博客站点，然后使用谷歌以及百度搜索自己的博客网站时，突然发现：What?居然搜索不到！！！顿时不禁黯然神伤。。。。。。这个时候，就意味着我们需要对自己的博客，进行SEO！<br>–TyouSF</p>
+          <img src="/Hexo博客的SEO/search10.png" alt="search10.png" title="">
+<blockquote class="blockquote-center"><p>好不容易搭建起了第一个属于自己的个人博客站点，然后使用谷歌以及百度搜索自己的博客网站时，突然发现：What?居然搜索不到！！！顿时不禁黯然神伤。。。。。。这个时候，就意味着我们需要对自己的博客，进行SEO！<br>–TyouSF</p>
 </blockquote>
-<blockquote><p>搜索引擎优化（英语：search engine optimization，缩写为SEO），是一种通过了解搜索引擎的运作规则来调整网站，以及提高目的网站在有关搜索引擎内排名的方式。由于不少研究发现，搜索引擎的用户往往只会留意搜索结果最前面的几个条目，所以不少网站都希望通过各种形式来影响搜索引擎的排序，让自己的网站可以有优秀的搜索排名。当中尤以各种依靠广告维生的网站为甚。</p>
-<footer><strong>搜索引擎优化</strong><cite><a href="https://zh.wikipedia.org/wiki/%E6%90%9C%E5%B0%8B%E5%BC%95%E6%93%8E%E6%9C%80%E4%BD%B3%E5%8C%96">维基百科</a></cite></footer></blockquote>
           <!--noindex-->
           <div class="post-button text-center">
             <a class="btn" href="/Hexo博客的SEO/#more" rel="contents">
